--- a/_includes/hero-navigation.html
+++ b/_includes/hero-navigation.html
@@ -9,7 +9,7 @@
 
         <div class="nav-grid">
           <div class="nav-grid__item">
-            <h2 class="nav-grid__title">Menu</h2>
+            <h2 class="nav-grid__title">Navigation</h2>
             <div class="mobile-nav">
               {% include navigation.html %}
             </div>
