--- a/_includes/javascripts.html
+++ b/_includes/javascripts.html
@@ -6,7 +6,7 @@
     resultsContainer: document.getElementById("js-results-container"),
     json: "{{site.baseurl}}/search.json",
     searchResultTemplate: '<div class="search-results__item"><a class="search-results__image" href="{url}" style="background-image: url({image})"></a> <a class="search-results__link" href="{url}"><span class="search-results-date"> <time datetime="{date}">{date}</time></span><div class="result-title">{title}</div></a></div>',
-    noResultsText: '<li class="no-results"><h3>No results found</h3></li>'
+    noResultsText: '<li class="no-results"><h3>Aucuns résultats trouvés</h3></li>'
   });
 </script>
 <script src="{{ site.baseurl }}/js/vendors/jquery.viewportchecker.min.js"></script>
