--- a/_includes/slider.html
+++ b/_includes/slider.html
@@ -12,7 +12,7 @@
       <div class="slider section" id="slider">
         <div class="slider__inner">
           <div class="section-top">
-            <h5 class="section-title">Articles Vedettes</h5>
+            <h5 class="section-title">Articles Chauds</h5>
           </div>
           <div class="main-slider">
             <!-- Start Featured Post -->
