--- a/_includes/footer-widgets/nav-widget.html
+++ b/_includes/footer-widgets/nav-widget.html
@@ -1,7 +1,7 @@
 <div class="col col-4 col-d-6 col-t-12">
   <div class="widget widget-nav">
     <div class="widget__head">
-      <h4 class="widget__title">Menu</h4>
+      <h4 class="widget__title">Navigation</h4>
     </div>
     {% include navigation.html %}
   </div>
