--- a/_includes/footer-widgets/recent-widget.html
+++ b/_includes/footer-widgets/recent-widget.html
@@ -1,7 +1,7 @@
 <div class="col col-4 col-d-6 col-t-12">
   <div class="widget widget-recent">
     <div class="widget__head">
-      <h4 class="widget__title">Articles Récents</h4>
+      <h4 class="widget__title">Articles Tièdes</h4>
     </div>
     {% for post in site.posts limit:2 %}
     <div class="recent-posts">
