--- a/_includes/post-navigation.html
+++ b/_includes/post-navigation.html
@@ -4,8 +4,7 @@
     <a class="prev__image fadein" href="{{page.previous.url}}"
       style="background-image: url({{site.baseurl}}{{page.previous.image}})"></a>
     <div class="prev__box">
-      <a class="post__nav post__nav__prev" href="{{page.previous.url}}"><i class="ion ion-ios-arrow-back"></i> Previous
-        Page</a>
+      <a class="post__nav post__nav__prev" href="{{page.previous.url}}"><i class="ion ion-ios-arrow-back"></i> Page Précédente</a>
       <h4 class="post__nav__title"><a href="{{page.previous.url}}">{{page.previous.title}}</a></h4>
     </div>
   </div>
@@ -14,7 +13,7 @@
   {% if page.next.url %}
   <div class="post__next">
     <div class="next__box">
-      <a class="post__nav post__nav__next" href="{{page.next.url}}">Next Page <i
+      <a class="post__nav post__nav__next" href="{{page.next.url}}">Page Suivante <i
           class="ion ion-ios-arrow-forward"></i></a>
       <h4 class="post__nav__title"><a href="{{page.next.url}}">{{page.next.title}}</a></h4>
     </div>
