--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,7 +7,7 @@
   <meta name='description' content='{% if page.description %}{{ page.description | strip_html | strip_newlines | truncate: 160 }}{% else %}Source incontournable pour une couverture indépendante sur l’actualité politique, économique, culturelle et sociale du Québec et du Canada.{% endif %}'>
 
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | absolute_url }}">
-  <link rel="alternate" type="application/rss+xml" title="{{ site.title | escape }}" href="{{ "/feed.xml" | relative_url }}">
+  <link rel="alternate" type="application/rss+xml" title="{{ site.title | escape }}" href="{{ "/sitemap" | relative_url }}">
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Caveat:700%7CBarlow:400,500,600,700&display=swap" rel="stylesheet">
