--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -12,7 +12,7 @@
     <a href="{{ site.baseurl }}/tag/sante" class="nav__link">Santé</a>
   </li>
   <li class="nav__item">
-    <a href="{{ site.baseurl }}/tag/science" class="nav__link">Science</a>
+    <a href="{{ site.baseurl }}/tag/sciences" class="nav__link">Sciences</a>
   </li>
   <li class="nav__item">
     <a href="{{ site.baseurl }}/tag/argent" class="nav__link">Argent</a>
